# Cpp-RustLikeNumerics

./: CMakeLists.txt  README.md
inc/: numerals.hpp  numerals.ixx  t_generic.hxx  t_generic.ixx
src/: main.cpp
